[gd_scene load_steps=10 format=3 uid="uid://dayvjmbn0liho"]

[ext_resource type="Script" path="res://scripts/managers/game_manager.gd" id="1_a5rab"]
[ext_resource type="Texture2D" uid="uid://csqxyifhopy8h" path="res://sprites/placeholder/icon.svg" id="2_ip7kn"]
[ext_resource type="PackedScene" uid="uid://dnmlmf5cgeoqv" path="res://scenes/areas/bug.tscn" id="3_lchj0"]
[ext_resource type="PackedScene" uid="uid://kw3yswyx5txj" path="res://scenes/characters/player.tscn" id="4_0piad"]
[ext_resource type="PackedScene" uid="uid://cqbet7nuj2k0k" path="res://scenes/areas/parasite.tscn" id="5_jhyhu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vi5f3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80u7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_siib2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig8yg"]

[node name="game_manager" type="Node2D" node_paths=PackedStringArray("bugs")]
script = ExtResource("1_a5rab")
bugs = [NodePath("midground/bugs/bug"), NodePath("midground/bugs/bug_2"), NodePath("midground/bugs/bug_3"), NodePath("midground/bugs/bug_4"), NodePath("midground/bugs/bug_5"), NodePath("midground/bugs/bug_6"), NodePath("midground/bugs/bug_7"), NodePath("midground/bugs/bug_8"), NodePath("midground/bugs/bug_9"), NodePath("midground/bugs/bug_10")]

[node name="background" type="Node2D" parent="."]

[node name="background" type="Sprite2D" parent="background"]
scale = Vector2(30, 30)
texture = ExtResource("2_ip7kn")

[node name="physics_barriers" type="StaticBody2D" parent="background"]

[node name="left_barrier" type="CollisionShape2D" parent="background/physics_barriers"]
position = Vector2(-1610, 0)
scale = Vector2(1, 170)
shape = SubResource("RectangleShape2D_vi5f3")

[node name="right_barrier" type="CollisionShape2D" parent="background/physics_barriers"]
position = Vector2(1610, 0)
scale = Vector2(1, 170)
shape = SubResource("RectangleShape2D_80u7v")

[node name="top_barrier" type="CollisionShape2D" parent="background/physics_barriers"]
position = Vector2(0, -1610)
scale = Vector2(170, 1)
shape = SubResource("RectangleShape2D_siib2")

[node name="bottom_barrier" type="CollisionShape2D" parent="background/physics_barriers"]
position = Vector2(0, 1610)
scale = Vector2(170, 1)
shape = SubResource("RectangleShape2D_ig8yg")

[node name="midground" type="Node2D" parent="."]

[node name="bugs" type="Node2D" parent="midground"]

[node name="bug" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-230, -123)
game_manager = NodePath("../../..")

[node name="bug_2" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(286, 64)
game_manager = NodePath("../../..")

[node name="bug_3" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-238, 222)
game_manager = NodePath("../../..")

[node name="bug_4" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-230, -123)
game_manager = NodePath("../../..")

[node name="bug_5" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(286, 64)
game_manager = NodePath("../../..")

[node name="bug_6" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-238, 222)
game_manager = NodePath("../../..")

[node name="bug_7" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-230, -123)
game_manager = NodePath("../../..")

[node name="bug_8" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(286, 64)
game_manager = NodePath("../../..")

[node name="bug_9" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-238, 222)
game_manager = NodePath("../../..")

[node name="bug_10" parent="midground/bugs" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_lchj0")]
position = Vector2(-238, 222)
game_manager = NodePath("../../..")

[node name="player" parent="midground" node_paths=PackedStringArray("game_manager") instance=ExtResource("4_0piad")]
scale = Vector2(0.25, 0.25)
game_manager = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="midground/player"]
limit_left = -1600
limit_top = -1600
limit_right = 1600
limit_bottom = 1600
editor_draw_limits = true

[node name="parasite" parent="midground/player" instance=ExtResource("5_jhyhu")]
position = Vector2(76, -12)

[node name="parasite_timer" type="Timer" parent="midground/player/parasite"]
autostart = true

[node name="foreground" type="Node2D" parent="."]

[node name="ui" type="CanvasGroup" parent="."]

[node name="score_label" type="CanvasLayer" parent="ui"]

[node name="score_label" type="Label" parent="ui/score_label"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = 9.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64

[node name="bugs_left_label" type="Label" parent="ui/score_label"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 8.0
offset_right = 640.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64

[connection signal="timeout" from="midground/player/parasite/parasite_timer" to="." method="_on_parasite_timer_timeout"]
